# ShowControl_DONOTUSE

./: README.md  classCueList.graphml
CueEngine/: CueEdit.ui  CueEdit_ui.py  CueEngine-2.ui  CueEngine.py  CueEngine.ui  CueEngine_ui.py  Cues.py  Journal.odt  Lighting.xcf  MixerApp.xcf  Open.xcf  Scrooge Moves.xml  ShowConf.py  ShowConf.xml  Sound.xcf  SoundFX.xcf  Stage.xcf  TestElementtree.py  TestProgLaunch.py  UDPClient.py
ShowControl/: ConfigurationNotes.txt  MixerDefs-r2.xml  default.cfg  default.cfg~
ShowControlDocs/: ShowControl_MixerControl.odt  ShowMixer.graphml  classMixerConf.graphml  classMixerMap.graphml  classShow.graphml  classShowConf.graphml  sound_effects_player.odt  sound_effects_player.rtf  sound_effects_player.tex  sound_effects_player_overview.odt  the_big_picture.odt  the_big_picture.rtf
ShowMixer/: .project  CharacterConfigDlg.ui  Cues.py  DynChanStripDlg.ui  MixerConf.py  MixerControl.py  (+15 more)
sound_effects_player/: .anjuta_sym_db.db  .gitignore  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  debug_sound_effects_player.sh  project.txt  project.xml  simple_project.xml  sound_effects_player.desktop  sounds.xml~  test_envelope.sh  test_looper.sh  test_resample.sh  try_player.sh
sound_effects_player/.anjuta/session/: anjuta.session  dock-layout.xml
sound_effects_player/Debug/: Makefile  config.h  config.status  libtool
sound_effects_player/Debug/doc/: Makefile
sound_effects_player/Debug/icons/: Makefile
sound_effects_player/Debug/po/: Makefile  Makefile.in  POTFILES
sound_effects_player/Debug/src/: Makefile  sound_effects_player
sound_effects_player/Debug/src/.deps/: button_subroutines.Po  display_subroutines.Po  gstreamer_subroutines.Po  main.Po  menu_subroutines.Po  message_subroutines.Po  network_subroutines.Po  parse_subroutines.Po  sound_effects_player.Po
sound_effects_player/doc/: Makefile.am  Makefile.in  sound_effects_player-docs.xml  sound_effects_player-sections.txt  sound_effects_player.odt  sound_effects_player.rtf  sound_effects_player_overview.odt  sound_effects_player_overview.rtf
sound_effects_player/icons/: Makefile.in
sound_effects_player/listing/: README  code.tex
sound_effects_player/play_sound/: .anjuta_sym_db.db  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  NEWS~  README  aclocal.m4  configure  configure.ac  debug_play_sound.sh  play_sound.desktop  project.txt
sound_effects_player/play_sound/.anjuta/: default.profile
sound_effects_player/play_sound/.anjuta/session/: anjuta.session  dock-layout.xml
sound_effects_player/play_sound/Debug/: Makefile  config.h  config.status  libtool
sound_effects_player/play_sound/Debug/po/: Makefile  Makefile.in  POTFILES
sound_effects_player/play_sound/Debug/src/: Makefile  play_sound
sound_effects_player/play_sound/Debug/src/.deps/: button_clicked.Po  gstreamer_utils.Po  main.Po  menu_handler.Po  message_handler.Po  network_subroutines.Po  parse_subroutines.Po  update_display.Po
sound_effects_player/play_sound/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
sound_effects_player/play_sound/doc/: Makefile.in  sound_effects_player.odt
sound_effects_player/play_sound/play_sound/: .anjuta_sym_db.db  Makefile.in  NEWS  NEWS~  configure  configure.ac
sound_effects_player/play_sound/play_sound/.anjuta/: default.profile
sound_effects_player/play_sound/play_sound/.anjuta/session/: anjuta.session  dock-layout.xml
sound_effects_player/play_sound/play_sound/Debug/: Makefile  config.h  config.status  libtool
sound_effects_player/play_sound/play_sound/Debug/po/: Makefile  Makefile.in  missing
sound_effects_player/play_sound/play_sound/Debug/src/: Makefile  play_sound
sound_effects_player/play_sound/play_sound/Debug/src/.deps/: play_sound.Po
sound_effects_player/play_sound/play_sound/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
sound_effects_player/play_sound/play_sound/src/: Makefile.am  Makefile.in  button_clicked.c  button_clicked.c~  button_clicked.h  button_clicked.h~  gstreamer_utils.c  gstreamer_utils.c~  gstreamer_utils.h  main.c~  play_sound.c  play_sound.c~  play_sound.h  play_sound.h~  play_sound.ui
sound_effects_player/play_sound/po/: POTFILES.in
sound_effects_player/play_sound/src/: Makefile.am  Makefile.in  app-menu.ui  button_clicked.c  button_clicked.c~  button_clicked.h  button_subroutines.c  button_subroutines.h~  display_subroutines.c  display_subroutines.h~  gstreamer_subroutines.c  gstreamer_subroutines.h  gstreamer_subroutines.h~  gstreamer_utils.c  gstreamer_utils.h  gstreamer_utils.h~  main.c  main.c~  menu_handler.c  menu_handler.h  menu_subroutines.c  menu_subroutines.h~  menubar.ui~  message_handler.c  message_handler.h  message_subroutines.c  message_subroutines.h~  network_subroutines.c  network_subroutines.c~  network_subroutines.h  network_subroutines.h~  parse_subroutines.c  parse_subroutines.c~  parse_subroutines.h~  play_sound.c  play_sound.c~  play_sound.h  play_sound.h~  play_sound.ui  update_display.c~  (+1 more)
sound_effects_player/po/: .gitignore  POTFILES  POTFILES.in
sound_effects_player/src/: .gitignore  Makefile.am  Makefile.in  app-menu.ui  button_subroutines.c  button_subroutines.h  display_subroutines.c  display_subroutines.h  gstenvelope.c  gstenvelope.h  gstlooper.c  gstlooper.h  gstreamer_subroutines.c  gstreamer_subroutines.h  indent.sh  main.c  main.h  menu_subroutines.c  menu_subroutines.h  message_subroutines.c  message_subroutines.h  network_subroutines.c  network_subroutines.h  parse_net_subroutines.c  parse_net_subroutines.h  parse_subroutines.c  parse_subroutines.h  parse_xml_subroutines.c  parse_xml_subroutines.h  preferences.ui  sequence_structure.h  sequence_subroutines.c  sequence_subroutines.h  signal_subroutines.c  signal_subroutines.h  sound_effects_player.c  sound_effects_player.h  sound_effects_player.ui  sound_structure.h  sound_subroutines.c  (+3 more)
sound_effects_player/test/: project.xml  project.xml~  sequence.xml  sequence.xml~  sounds.xml  sounds.xml~
(+16 files in other folders)
